environment/after-fix/backend-svc-working.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-api      # FIXED
  ports:
  - port: 80
    targetPort: 5678
