environment/after-fix/network-policy-fixed.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 80        # allow HTTP
        - protocol: TCP
          port: 443       # allow HTTPS
        - protocol: UDP
          port: 53        # allow DNS
        - protocol: TCP
          port: 53        # allow DNS
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
